Pvt-Ltd-stack.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: Networking Lab - Initial Setup
Parameters :
  LatestAmiId :
    Type : 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
  KeyName:
    Description: Key Pair for EC2
    Type: 'AWS::EC2::KeyPair::KeyName'
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues: [t2.micro]
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      CidrBlock: 192.168.0.0/16
      Tags:
        -
          Key: 'Name'
          Value: 'Pvt_VPC_1'
  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      MapPublicIpOnLaunch: true
      CidrBlock: 192.168.1.0/24
      Tags:
        -
          Key: 'Name'
          Value: 'Pvt_1_Public'
  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock: 192.168.2.0/24
      Tags:
        -
          Key: 'Name'
          Value: 'Pvt_1_Private'
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        -
          Key: 'Name'
          Value: 'Pvt_1_IG'
  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPC
      InternetGatewayId:
        Ref: InternetGateway
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
        -
          Key: 'Name'
          Value: 'Pvt_1_Public-RT'
  PublicNetworkAcl:
    Type: "AWS::EC2::NetworkAcl"
    Properties:
      VpcId:
        Ref: "VPC"
  PublicNACLEntryEgress100:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: '0.0.0.0/0'
      NetworkAclId:
        Ref: PublicNetworkAcl
      Egress: 'true'
      PortRange:
        From: '0'
        To: '65535'
      Protocol: '-1'
      RuleAction: Allow
      RuleNumber: 100
  PublicNACLEntryIngress100:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: '0.0.0.0/0'
      NetworkAclId:
        Ref: PublicNetworkAcl
      Egress: 'false'
      PortRange:
        From: '0'
        To: '65535'
      Protocol: -1
      RuleAction: Allow
      RuleNumber: 100
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway
  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PublicSubnet
      RouteTableId:
        Ref: PublicRouteTable
  PublicSubnetNetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: PublicSubnet
      NetworkAclId:
        Ref: PublicNetworkAcl

  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: HTTP ingress
      VpcId:
        Ref: VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0
      - IpProtocol: icmp
        FromPort: '-1'
        ToPort: '-1'
        CidrIp: 192.168.0.0/16
      Tags:
        -
          Key: 'Name'
          Value: 'Pvt_1_WEBSG'
  DBServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: HTTP ingress
      VpcId:
        Ref: VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 192.168.0.0/16
      - IpProtocol: icmp
        FromPort: '-1'
        ToPort: '-1'
        CidrIp: 192.168.0.0/16
      Tags:
        -
          Key: 'Name'
          Value: 'Pvt_1_DBSG '
  WebServerInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref 'InstanceType'
      KeyName: !Ref KeyName
      ImageId: !Ref LatestAmiId
      NetworkInterfaces:
      - GroupSet:
        - Ref: WebServerSecurityGroup
        AssociatePublicIpAddress: 'false'
        DeviceIndex: '0'
        DeleteOnTermination: 'true'
        SubnetId:
          Ref: PublicSubnet
      Tags:
        -
          Key: 'Name'
          Value: 'Pvt_1 Web Server'
      UserData:
        Fn::Base64: !Sub |
            #!/bin/bash -xe
            sudo yum update -y
            sudo yum install httpd -y
            sudo systemctl start httpd
            sudo systemctl enable httpd
            echo "<html><body><p><h1 align=center> Website is working. </h1></body></html>" > /var/www/html/index.html
  DBServerInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref 'InstanceType'
      KeyName: !Ref KeyName
      ImageId: !Ref LatestAmiId
      NetworkInterfaces:
      - GroupSet:
        - Ref: DBServerSecurityGroup
        AssociatePublicIpAddress: 'false'
        DeviceIndex: '0'
        DeleteOnTermination: 'true'
        SubnetId:
          Ref: PrivateSubnet
      Tags:
        -
          Key: 'Name'
          Value: 'Pvt_1 DB machine'

  EIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId:
        Ref: WebServerInstance
###################################################
  VPC2:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      CidrBlock: 172.25.0.0/16
      Tags:
        -
          Key: 'Name'
          Value: 'Pvt_2_VPC'
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC2
      MapPublicIpOnLaunch: true
      CidrBlock: 172.25.1.0/24
      Tags:
        -
          Key: 'Name'
          Value: 'Pvt_2_Public'

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC2
      CidrBlock: 172.25.2.0/24
      Tags:
        -
          Key: 'Name'
          Value: 'Pvt_2_Private'
  InternetGateway2:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        -
          Key: 'Name'
          Value: 'Pvt_2_IG'
  VPCGatewayAttachment2:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPC2
      InternetGatewayId:
        Ref: InternetGateway2
  PublicRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC2
      Tags:
        -
          Key: 'Name'
          Value: 'Pvt_2_Public-RT'
  PublicRoute2:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId:
        Ref: PublicRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway2
  PublicSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PublicSubnet2
      RouteTableId:
        Ref: PublicRouteTable2
  WebServerSecurityGroup2:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: HTTP ingress
      VpcId:
        Ref: VPC2
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0
      - IpProtocol: icmp
        FromPort: '-1'
        ToPort: '-1'
        CidrIp: 172.25.0.0/16
      Tags:
        -
          Key: 'Name'
          Value: 'Pvt_2_WEBSG'
  WebServerInstance2:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref 'InstanceType'
      KeyName: !Ref KeyName
      ImageId: !Ref LatestAmiId
      NetworkInterfaces:
      - GroupSet:
        - Ref: WebServerSecurityGroup2
        AssociatePublicIpAddress: 'true'
        DeviceIndex: '0'
        DeleteOnTermination: 'true'
        SubnetId:
          Ref: PublicSubnet2
      Tags:
        -
          Key: 'Name'
          Value: 'Pvt_2 Web Server'

  DBServerSecurityGroup2:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: HTTP ingress
      VpcId:
        Ref: VPC2
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 172.25.0.0/16
      - IpProtocol: icmp
        FromPort: '-1'
        ToPort: '-1'
        CidrIp: 172.25.0.0/16
      Tags:
        -
          Key: 'Name'
          Value: 'Pvt_2_DBSG '
  DBServerInstance2:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref 'InstanceType'
      KeyName: !Ref KeyName
      ImageId: !Ref LatestAmiId
      NetworkInterfaces:
      - GroupSet:
        - Ref: DBServerSecurityGroup2
        AssociatePublicIpAddress: 'false'
        DeviceIndex: '0'
        DeleteOnTermination: 'true'
        SubnetId:
          Ref: PrivateSubnet2
      Tags:
        -
          Key: 'Name'
          Value: 'Pvt_2 DB machine'
